estilos primera version

--- a/index.html
+++ b/index.html
@@ -5,47 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joseph Ryan BB</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header><img src="./assets/images/FLK_241222.jpg" alt="Foto de Perfil"></header>
     <section>
-        <h2>Joseph Ryan (Flako)</h2>
-        <a href="">
-            <div>
-                <span>Joseph Ryan</span>
-                <img src="./assets/images/icon_linkedin.png" alt="Logo LinkedIn">
-            </div>
-        </a>
-        <a href="">
-            <div>
-                <span>@FlakoBB</span>
-                <img src="./assets/images/icon_github.png" alt="Logo GitHub">
-            </div>
-        </a>
-        <a href="">
-            <div>
-                <span>@flako_jrbb</span>
-                <img src="./assets/images/icon_instagram.png" alt="Logo Instagram">
-            </div>
-        </a>
-        <a href="">
-            <div>
-                <span>@Joseph_RBB</span>
-                <img src="./assets/images/icon_twitter.png" alt="Logo Twitter">
-            </div>
-        </a>
-        <a href="">
-            <div>
-                <span>@FlakoBB</span>
-                <img src="./assets/images/icon_youtube.png" alt="Logo Youtube">
-            </div>
-        </a>
-        <a href="">
-            <div>
-                <span>@JosephRyan</span>
-                <img src="./assets/images/icon_spotify.png" alt="Logo Spotify">
-            </div>
-        </a>
+        <h1>Joseph Ryan (Flako)</h1>
+        <nav class="enlaces">
+            <a href="" class="linkedin">
+                <div id="enlace" class="derecha">
+                    <span>Joseph Ryan</span>
+                    <img src="./assets/images/icon_linkedin.png" alt="Logo LinkedIn">
+                </div>
+            </a>
+            <a href="" class="github">
+                <div id="enlace" class="izquierda">
+                    <span>@FlakoBB</span>
+                    <img src="./assets/images/icon_github.png" alt="Logo GitHub">
+                </div>
+            </a>
+            <a href="" class="instagram">
+                <div id="enlace" class="derecha">
+                    <span>@flako_jrbb</span>
+                    <img src="./assets/images/icon_instagram.png" alt="Logo Instagram">
+                </div>
+            </a>
+            <a href="" class="twitter">
+                <div id="enlace" class="izquierda">
+                    <span>@Joseph_RBB</span>
+                    <img src="./assets/images/icon_twitter.png" alt="Logo Twitter">
+                </div>
+            </a>
+            <a href="" class="youtube">
+                <div id="enlace" class="derecha">
+                    <span>@FlakoBB</span>
+                    <img src="./assets/images/icon_youtube.png" alt="Logo Youtube">
+                </div>
+            </a>
+            <a href="" class="spotify">
+                <div id="enlace" class="izquierda">
+                    <span>@JosephRyan</span>
+                    <img src="./assets/images/icon_spotify.png" alt="Logo Spotify">
+                </div>
+            </a>
+        </nav>
     </section>
 </body>
 </html>
