Estilos finales (responsive) | enlaces a las redes

--- a/index.html
+++ b/index.html
@@ -12,39 +12,39 @@
     <section>
         <h1>Joseph Ryan (Flako)</h1>
         <nav class="enlaces">
-            <a href="" class="linkedin">
-                <div id="enlace" class="derecha">
+            <a target="_blank" href="https://bit.ly/3WdqPkI" class="linkedin">
+                <div id="enlace">
                     <span>Joseph Ryan</span>
                     <img src="./assets/images/icon_linkedin.png" alt="Logo LinkedIn">
                 </div>
             </a>
-            <a href="" class="github">
-                <div id="enlace" class="izquierda">
+            <a target="_blank" href="https://bit.ly/3Uchfhr" class="github">
+                <div id="enlace">
                     <span>@FlakoBB</span>
                     <img src="./assets/images/icon_github.png" alt="Logo GitHub">
                 </div>
             </a>
-            <a href="" class="instagram">
-                <div id="enlace" class="derecha">
+            <a target="_blank" href="https://bit.ly/3Uf0KkW" class="instagram">
+                <div id="enlace">
                     <span>@flako_jrbb</span>
                     <img src="./assets/images/icon_instagram.png" alt="Logo Instagram">
                 </div>
             </a>
-            <a href="" class="twitter">
-                <div id="enlace" class="izquierda">
+            <a target="_blank" href="https://bit.ly/3FPXCHR" class="twitter">
+                <div id="enlace">
                     <span>@Joseph_RBB</span>
                     <img src="./assets/images/icon_twitter.png" alt="Logo Twitter">
                 </div>
             </a>
-            <a href="" class="youtube">
-                <div id="enlace" class="derecha">
-                    <span>@FlakoBB</span>
+            <a target="_blank" href="https://bit.ly/3YbKKm9" class="youtube">
+                <div id="enlace">
+                    <span>@flakobb</span>
                     <img src="./assets/images/icon_youtube.png" alt="Logo Youtube">
                 </div>
             </a>
-            <a href="" class="spotify">
-                <div id="enlace" class="izquierda">
-                    <span>@JosephRyan</span>
+            <a target="_blank" href="https://spoti.fi/356UZ4j" class="spotify">
+                <div id="enlace">
+                    <span>JosephRyan</span>
                     <img src="./assets/images/icon_spotify.png" alt="Logo Spotify">
                 </div>
             </a>
